<resources>
    <string name="app_name">Dico LSG</string>

    <string name="titre_lien_accueil">Accueil</string>
    <string name="titre_groupe_dictionnaire">Dictionnaire</string>
    <string name="titre_lien_alphabetique">Alphabétique</string>
    <string name="titre_lien_categories">Catégories</string>
    <string name="titre_lien_suggestions">Suggestions</string>
    <string name="titre_lien_bases">Apprendre les bases</string>
    <string name="titre_lien_apropos">A propos</string>

    <string name="apropos1">Cette application est destinée à l’apprentissage de la Langue des Signes Guinéenne.
Elle est accessible gratuitement à tous ceux qui souhaitent s’initier ou se perfectionner …
Sourds, entendants, parents, amis, enseignants ou simplement intéressés … cet outil est fait pour vous.</string>
    <string name="apropos2">Cette appli est le résultat de plusieurs mois de collaboration entre l’association Wontanara avec les enfants sourds de Guinée basée en France (wontanara.sourds.guinee@gmail.com), l’association ASCULSGUI basée en Guinée à Conakry (asculsgui@yahoo.fr) et l’école d’ingénieurs Polytech Nancy.</string>
    <string name="apropos3">Elle se veut participative, vous pouvez donc nous suggérer des mots/signes à ajouter dans la rubrique « suggestion ».</string>
    <string name="apropos4">Nos remerciements sincères à Enzo d’Andréa et Deborah Fache, qui l’ont développée gracieusement dans le cadre de leurs études d’ingénieurs à Polytech Nancy.</string>
    <string name="apropos5">… à la mémoire de Karou KABA, initiateur du projet</string>
    <string name="apropos_maintenance">Maintenance assurée depuis décembre 2024 par github.com/dineproject (Guinify).</string>

    <string name="download_categories_title">Ajouter une catégorie</string>
    <string name="download_category">Télécharger la catégorie %1$s ?</string>
    <string name="update_category">Mettre à jour la catégorie %1$s ?</string>
    <string name="delete_categories">Supprimer les catégories sélectionnées ?</string>
    <string name="download_category_approximated_size">Le téléchargement ne dépassera pas %1$.1f Mo.</string>
    <string name="download">Télécharger</string>
    <string name="update">Mettre à jour</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>

    <plurals name="word_count">
        <item quantity="one">%1$d mot</item>
        <item quantity="other">%1$d mots</item>
    </plurals>

    <string name="no_words">Pas de mots. Ajoutez-en depuis les catégories.</string>
    <string name="no_categories_available">Pas de catégories installées. Utilisez le bouton ci-dessous pour en ajouter.</string>
    <string name="no_downloadable_categories_available">Pas de catégories disponibles</string>
    <string name="loading">Chargement…</string>
    <string name="error">Une erreur est survenue.</string>

    <string name="description_navigation_drawer_open">Open Navigation drawer</string>
    <string name="description_navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_video_player">FullscreenActivity</string>
    <string name="explication_suggestions">Cette page vous permet de soumettre des suggestions aux administrateurs. Ils pourront s\'en inspirer pour ajouter un mot à la liste.</string>
    <string name="coming_soon">Cette page est en cours de création. Elle sera disponible dans une future mise à jour de l\'application.</string>

<!--    <string name="base_url">http://ea-perso.ovh</string>-->
    <string name="base_url">http://www.wesg.ovh</string>
    <string name="size_image_max">Taille max autorisée : 200ko</string>
    <string name="format_image">Formats autorisés : .jpeg .jpg .png .gif</string>
    <string name="size_video_max">Taille max autorisée : 500ko</string>
    <string name="format_video">Formats autorisés : .mp4</string>
    <string name="size_image_too_large">"Attention, l'image est trop volumineuse\nTaille max autorisée : 200ko"</string>
    <string name="size_video_too_large">"Attention, la vidéo est trop volumineuse\nTaille max autorisée : 500ko"</string>
    <string name="send_suggestion">Envoyer la suggestion</string>
    <string name="loading_suggestion">Envoi en cours...</string>

</resources>