<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".controller.activities.AproposActivity"
   android:orientation="vertical"
   android:layout_gravity="center">

   <include
       layout="@layout/toolbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_margin="0dp">

               <ImageView
                   android:layout_width="0dp"
                   android:layout_weight="18"
                   android:layout_height="150dp"
                   android:src="@drawable/logo_wontanara"
                   android:contentDescription="Wontanara Logo" />

               <ImageView
                   android:layout_width="0dp"
                   android:layout_weight="22"
                   android:layout_height="120dp"
                   android:src="@drawable/logo_asculsgui"
                   android:contentDescription="Asculsgui Logo" />
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center"
               android:layout_marginTop="10dp">

               <ImageView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="50dp"
                   android:layout_marginStart="40dp"
                   android:layout_marginEnd="20dp"
                   android:src="@drawable/polytech_nancy_quadri_hd"
                   android:contentDescription="Polytech Logo" />

               <ImageView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="50dp"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="40dp"
                   android:src="@drawable/logo_guinify"
                   android:contentDescription="Guinify Logo" />
           </LinearLayout>

           <TextView
               android:id="@+id/textView1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="left"
               android:layout_margin="@dimen/text_margin"
               android:text="@string/apropos1" />

           <TextView
               android:id="@+id/textView2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/text_margin"
               android:text="@string/apropos2" />

           <TextView
               android:id="@+id/textView3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/text_margin"
               android:text="@string/apropos3" />

           <TextView
               android:id="@+id/textView4"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/text_margin"
               android:text="@string/apropos4" />

           <TextView
               android:id="@+id/textView_maintenance"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/text_margin"
               android:text="@string/apropos_maintenance" />

           <TextView
               android:id="@+id/textView5"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="end"
               android:layout_margin="@dimen/text_margin"
               android:text="@string/apropos5" />

       </LinearLayout>

   </ScrollView>

</LinearLayout>