<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.SuggestionsActivity"
    android:id="@+id/suggestions_activity_drawer_layout">

    <!--    Activité    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/explication_suggestions" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/word_input_suggestions"
                    app:counterMaxLength="30"
                    app:counterEnabled="true"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mot"
                        android:maxLength="30"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/definition_input_suggestion"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Définition" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Choisir une image..."
                        android:id="@+id/image_button_suggestion" />

                    <ImageButton
                        android:id="@+id/delete_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_delete_24"
                        android:visibility="gone" />



                    <!--                <TextView-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:id="@+id/nom_image_suggestion" />-->

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_image_max"
                    android:id="@+id/max_size_image_textview_suggestion"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/format_image"
                    android:id="@+id/format_image_textview_suggestion"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="15dp"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/preview_image_suggestion" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Choisir une vidéo..."
                        android:id="@+id/video_button_suggestion" />

                    <ImageButton
                        android:id="@+id/delete_video_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_delete_24"
                        android:visibility="gone" />



                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_video_max"
                    android:id="@+id/max_size_video_textview_suggestion"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/format_video"
                    android:id="@+id/format_video_textview_suggestion"/>

                <VideoView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="15dp"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/preview_video_suggestion" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_suggestion"
                    android:id="@+id/validation_button_suggestion"
                    android:layout_marginBottom="50dp"
                    android:layout_gravity="right"
                    />


            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <!--    Navigation-->
    <include
        layout="@layout/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</androidx.drawerlayout.widget.DrawerLayout>